# Final-Proyect-Redes

./: .gitignore  CMakeLists.txt  GraphNetwork.db  README.md
NET/: README
UDP-RDT/: Makefile  SOCKET.hpp  UDP_RDT_SOCKET.hpp  UDP_SOCKET.hpp  client  client.cpp  server  server.cpp
include/App/: App.hpp
include/App/Client/: ClientCodeInput.hpp  ClientInterface.hpp  ClientProtocolHandler.hpp
include/App/Server/: Repository0MasterProtocol.hpp  RepositoryInterface.hpp  ServerInterface.hpp  ServerProtocolHandler.hpp
include/App/Tools/: Colors.hpp  Fixer.hpp  InterfacePerformance.hpp
include/App/TransportParser/: Client0MainServerParser.hpp  Create.hpp  Delete.hpp  IncludeH.hpp  MainServer0SlaveParser.hpp  Read.hpp  Update.hpp
include/DataBase/: Sqlite.hpp  Tools.hpp
include/Network/: RDTListener.hpp  RDTMask.hpp  RDTSocket.hpp  Socket.hpp  UdpSocket.hpp
include/Network/Algorithm/: RDTEstimator.hpp  base64.hpp  sha256.hpp
include/database/: Sqlite.hpp
settings/: Cenapse.conf
src/: Client.cpp  MainServer.cpp  Slave.cpp
src/App/Client/: ClientInterface.cpp
src/App/Server/: Repository0MasterProtocol.cpp  RepositoryInterface.cpp  ServerInterface.cpp
src/App/Tools/: Colors.cpp  Fixer.cpp  InterfacePerformance.cpp
src/App/TransportParser/: Create.cpp  Delete.cpp  Read.cpp  Update.cpp
src/DataBase/: Sqlite.cpp  Tools.cpp
src/Network/: RDTListener.cpp  RDTMask.cpp  RDTSocket.cpp  UdpSocket.cpp
src/Network/Algorithm/: RDTEstimator.cpp  RDTPacket.cpp  base64.cpp  sha256.cpp
